maj 2024 en cours pour présentation groupe R région

--- a/0_about.Rmd
+++ b/0_about.Rmd
@@ -12,6 +12,7 @@ library(htmltools)
 library(htmlwidgets)
 library(paletteer)
 library(glue)
+#devtools::install_github("statnmap/HatchedPolygons")
 library(HatchedPolygons)
 library(crosstalk)
 library(shiny)
@@ -27,7 +28,7 @@ library(reactable)
 library(fontawesome)
 library(formattable)
 library(sparkline)
-library(rgdal)
+#library(rgdal)
 library(osrm)
 library(fontawesome)
 library(geosphere)
